# ai-product-analytics

./: README.md  app.py  pyproject.toml
data/: sessions.parquet  users.parquet
docs/: architecture.md
src/ai_product_analytics/: __init__.py  data.py  experiments.py
src/ai_product_analytics/metrics/: __init__.py  adoption.py  economics.py  funnel.py  quality.py  retention.py
tests/: test_data.py  test_experiments.py  test_metrics.py
