[project]
name = "ai-product-analytics"
version = "0.1.0"
description = "GenAI product growth-analytics dashboard: adoption, retention, feature funnels, AI quality, unit economics."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars>=1.42.1",
    "plotly>=6.8.0",
    "streamlit>=1.58.0",
]

[project.scripts]
ai-product-analytics = "ai_product_analytics.data:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
